force-app/main/default/objects/Opportunity/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Feedback for the opportunity.</description>
    <inlineHelpText>Provide feedback for this opportunity.</inlineHelpText>
    <label>Feedback</label>
    <type>TextArea</type>
</CustomField>