force-app/main/default/objects/Opportunity/fields/Termination_Date_20240810_132700__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date_20240810_132700__c</fullName>
    <description>Date when the opportunity is terminated.</description>
    <inlineHelpText>Set the date when the opportunity is terminated.</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>