force-app/main/default/objects/Opportunity/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Business time zone for the opportunity.</description>
    <inlineHelpText>Select the business time zone relevant to this opportunity.</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UTC</fullName>
                <default>true</default>
                <label>UTC</label>
            </value>
            <value>
                <fullName>US/Eastern</fullName>
            </value>
            <value>
                <fullName>US/Central</fullName>
            </value>
            <value>
                <fullName>US/Mountain</fullName>
            </value>
            <value>
                <fullName>US/Pacific</fullName>
            </value>
            <value>
                <fullName>Europe/London</fullName>
            </value>
            <value>
                <fullName>Europe/Paris</fullName>
            </value>
            <value>
                <fullName>Europe/Berlin</fullName>
            </value>
            <value>
                <fullName>Europe/Madrid</fullName>
            </value>
            <value>
                <fullName>Europe/Rome</fullName>
            </value>
            <value>
                <fullName>Europe/Zurich</fullName>
            </value>
            <value>
                <fullName>Europe/Amsterdam</fullName>
            </value>
            <value>
                <fullName>Europe/Brussels</fullName>
            </value>
            <value>
                <fullName>Europe/Stockholm</fullName>
            </value>
            <value>
                <fullName>Europe/Helsinki</fullName>
            </value>
            <value>
                <fullName>Europe/Athens</fullName>
            </value>
            <value>
                <fullName>Europe/Istanbul</fullName>
            </value>
            <value>
                <fullName>Asia/Dubai</fullName>
            </value>
            <value>
                <fullName>Asia/Kolkata</fullName>
            </value>
            <value>
                <fullName>Asia/Singapore</fullName>
            </value>
            <value>
                <fullName>Asia/Hong_Kong</fullName>
            </value>
            <value>
                <fullName>Asia/Tokyo</fullName>
            </value>
            <value>
                <fullName>Asia/Shanghai</fullName>
            </value>
            <value>
                <fullName>Asia/Seoul</fullName>
            </value>
            <value>
                <fullName>Asia/Bangkok</fullName>
            </value>
            <value>
                <fullName>Asia/Jakarta</fullName>
            </value>
            <value>
                <fullName>Australia/Sydney</fullName>
            </value>
            <value>
                <fullName>Australia/Melbourne</fullName>
            </value>
            <value>
                <fullName>America/Toronto</fullName>
            </value>
            <value>
                <fullName>America/Vancouver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>